improve responsive design, fix settings layout bugs

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,28 +1,33 @@
+body
+{
+  max-width: 100%;
+  width: 100%;
+}
 .container
 {
-  position: relative;
-  min-height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   width: 100%;
+  overflow: hidden;
+  padding: 10px;
 }
 .title
 {
   font-family: "Quicksand", "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; /* 1 */
   display: block;
   font-weight: 300;
-  font-size: 100px;
-  color: #35495e;
   letter-spacing: 1px;
 }
 .subtitle
 {
   font-weight: 300;
-  font-size: 42px;
-  color: #526488;
   word-spacing: 5px;
   padding-bottom: 15px;
 }
@@ -31,14 +36,18 @@
   padding-top: 15px;
 }
 .searchbar {
-  font-size: 20px;
+  font-size: 1.25em;
   line-height: 1.25em;
   border-radius: 3px;
   padding: 0.25em 0.5em;
   border: 1px solid #aaa;
-  width: 600px;
-  margin: 50px 0 0 0;
+  margin: 50px 0 0;
+  width: 100%;
 }
 .searchbar:focus::placeholder {
   color: transparent;
+}
+.searchbox {
+  width: 90%;
+  max-width: 600px;
 }
